# modbuilder

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cairn.yaml  compile.bat  compile.mk  compile_commands.json  test_exec  version.cpp.in  version.hpp.in
module_example/basic/: A.cpp  Aimp.cpp  B.cpp  modules.json  modules.yaml  test.cpp
module_example/basic/inner/: modFoo.cpp
module_example/includes/: just_example.hpp  just_example2.hpp
module_example/modA/: modA.pcm  modA_code.cpp  modB_code.cpp  modules.json  modules.yaml
module_example/partitions/: mmain-part-ifc.cpp  mmain-part.cpp  mmain-pubpart.cpp  mmain.cpp
src/cairn/: CMakeLists.txt  abstract_compiler.cpp  abstract_compiler.hpp  build_plan.cpp  build_plan.hpp  builder.cpp  builder.hpp  cli.cpp  cli.hpp  compile_commands_supp.cpp  compile_commands_supp.hpp  compile_commands_supp.ifc.cpp  compile_target.cpp  compile_target.hpp  gnu_compiler_setup.cpp  gnu_compiler_setup.hpp  main.cpp  module_database.cpp  module_database.hpp  module_database.ifc.cpp  module_resolver.cpp  module_resolver.hpp  module_resolver.ifc.cpp  module_type.hpp  modules.yaml  origin_env.hpp  preprocess.cpp  preprocess.hpp  preprocess.ifc.cpp  scanner.cpp  scanner.hpp  script_build.cpp  version.cpp  version.hpp
src/cairn/compilers/clang/: compiler_clang.cpp  compiler_clang.hpp  modules.yaml
src/cairn/compilers/gcc/: compiler_gcc.cpp  compiler_gcc.hpp  factory.hpp  modules.yaml
src/cairn/compilers/msvc/: compiler_msvc.cpp  compiler_msvc.hpp  modules.yaml
src/cairn/utils/: arguments.cpp  arguments.hpp  env.cpp  env.hpp  fd_streambuf.cpp  fd_streambuf.hpp  filesystem.hpp  fkyaml.cpp  function_view.cpp  hash.hpp  log-impl.cpp  log.cpp  log.hpp  log.ifc.cpp  modules.yaml  process.cpp  process.hpp  process_posix.cpp  process_posix.hpp  process_win.cpp  process_win.hpp  serialization_rules.cpp  serialization_rules.hpp  serializer.cpp  serializer.hpp  simple_json.cpp  temp_file.cpp  temp_file.hpp  thread_pool.hpp  utf_8.cpp  utf_8.hpp  vendors.cpp  which.hpp
src/modbuild/: CMakeLists.txt  abstract_compiler.cpp  abstract_compiler.hpp  app.hpp  arguments.hpp  builder.cpp  builder.hpp  cli.cpp  cli.hpp  compile_commands_supp.cpp  compile_commands_supp.hpp  discovery.cpp  discovery.hpp  log.hpp  main.cpp  module_database.cpp  module_database.hpp  module_resolver.cpp  module_resolver.hpp  module_type.hpp  origin_env.hpp  scanner.cpp  scanner.hpp
src/modbuild/compilers/clang/: CMakeLists.txt  compiler_clang.cpp  compiler_clang.hpp  factory.hpp
src/modbuild/compilers/gcc/: CMakeLists.txt  compiler_gcc.cpp  compiler_gcc.hpp
src/modbuild/compilers/msvc/: CMakeLists.txt  compiler_msvc.cpp  compiler_msvc.hpp  factory.hpp
src/modbuild/utils/: arguments.hpp  fd_streambuf.hpp  log.cpp  log.hpp  process.cpp  process.hpp  product_name.hpp  thread_pool.hpp  tuple_hash.hpp  version.hpp  which.hpp
tests/: CMakeLists.txt  clang_file_scanner_test.cpp  gcc_file_scanner_test.cpp  scanner_test.cpp  test_db_basic_clang.cpp
